# PyTeleBetter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config_accounts.json.example  pyproject.toml
pytelebotter/: main.py
pytelebotter/orm/: __init__.py  models.py
pytelebotter/parser/: main.py
pytelebotter/randomizer/: grammar.peg  main.py
pytelebotter/telegram/: account.py  channel_layer.py
pytelebotter/utils/: logger.py  types.py
